--- a/views/work.ejs
+++ b/views/work.ejs
@@ -10,8 +10,8 @@
                 <p><%= toDoItems[i].description %></p>
             </div>
         <% } %>
-        <form action="/" class="class" method="POST">
-            <input type="text" name="newTask" placeholder="New Task" autocomplete="off">
+        <form action="/work" class="class" method="POST">
+            <input type="text" name="newWork" placeholder="New Work" autocomplete="off">
             <button type="submit">+</button>
         </form>
     </div>
