--- a/views/work.ejs
+++ b/views/work.ejs
@@ -2,13 +2,14 @@
     <div class="box" id="heading">
         <h1><%=date%></h1>
     </div>
-
     <div class="box">
         <% for(var i = 0; i < toDoItems.length; i++) {%>
-            <div class="item">
-                <input type="checkbox">
-                <p><%= toDoItems[i].description %></p>
-            </div>
+            <form action="/delete" method="POST">
+                <div class="item">
+                    <input name="checkbox" value="<%= toDoItems[i].description %>" type="checkbox" onchange="this.form.submit()">
+                    <p><%= toDoItems[i].description %></p>
+                </div>
+            </form>
         <% } %>
         <form action="/work" class="class" method="POST">
             <input type="text" name="newWork" placeholder="New Work" autocomplete="off">
